--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "version": "0.4.0",
+  "version": "0.4.1",
   "name": "primer-avatars",
   "description": "Basic styles for user profile avatars.",
   "homepage": "http://primercss.io/",
   "author": "GitHub, Inc.",
   "license": "MIT",
   "style": "index.scss",
+  "main": "build/index.js",
   "files": [
     "index.scss",
     "lib",
@@ -16,20 +17,17 @@
     "url": "https://github.com/primer/primer-avatars/issues"
   },
   "scripts": {
-    "setup": "if [ ! -d \"node_modules\" ]; then npm install; fi",
-    "build": "node-sass index.scss --include-path node_modules --output-style compressed | postcss -c .postcss.json -o build/build.css",
-    "prepublish": "npm run setup && npm run build",
+    "build": "primer-module-build index.scss",
+    "prepublish": "npm run build",
     "test": "npm run build && stylelint **/*.scss -c .stylelintrc.json -s scss"
   },
   "dependencies": {
     "primer-support": "*"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "node-sass": "^3.7.0",
-    "postcss-cli": "^2.5.2",
-    "stylelint": "^7.0.3",
-    "stylelint-config-primer": "^1.1.0"
+    "stylelint": "*",
+    "stylelint-config-primer": "*",
+    "primer-module-build": "*"
   },
   "keywords": [
     "avatars",
